--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
             <img src="./images/pdf.png" alt="PDF Icon">
         </div>
         <div class="airplane">
-            <img src="./images/Airplane_bg.png" alt="airplane">
+            <img src="./images/Airplane_bg.png" class="airplane-image" alt="airplane">
         </div>
         <h1 class="title title-animation">
             <span class="subtitle">Скачайте фотокатолог</span> всех дверей с подробным описанием <span
