--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./styles/swiper-bundle.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/bizon2.css"/>
     <link rel="stylesheet" href="./styles/styles.css">
