--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     </div>
                     <div class="main-screen-advantages-left"></div>
                     <div class="main-screen-advantages-right"></div>
+                    <div class="main-screen-pagination swiper-pagination"></div>
                 </div>
             </div>
             <div class="main-screen-image">
