--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             </div>
                             Хорошая шумоизоляция
                         </div>
-                        <div class="advantage-item  title-animation">
+                        <div class="advantage-item dont-show title-animation">
                             <div class="checkbox">
                                 <img src="./images/checkbox.png" alt="Checkbox">
                             </div>
@@ -200,7 +200,7 @@
                             </div>
                             3 уровня контура
                         </div>
-                        <div class="advantage-item  title-animation">
+                        <div class="advantage-item  dont-show title-animation">
                             <div class="checkbox">
                                 <img src="./images/checkbox.png" alt="Checkbox">
                             </div>
