--- a/index.html
+++ b/index.html
@@ -783,62 +783,61 @@
     </div>
 </section>
 
-<section class="four-screen">
-    <div class="content-box">
-        <div class="catalog-image">
-            <img src="./images/Catalog.png" alt="Catalog">
-            <img src="./images/arrow4.png" class="catalog-arrow" alt="Catalog arrow">
-        </div>
-        <div class="pdf-gray">
-            <img src="./images/sticker_PDF.png" alt="PDF-gray">
-        </div>
-        <div class="pdf">
-            <img src="./images/pdf.png" alt="PDF Icon">
-        </div>
-        <div class="airplane">
-            <img src="./images/Airplane_bg.png" class="airplane-image" alt="airplane">
-        </div>
-        <h1 class="title title-animation">
-            <span class="subtitle">Скачайте фотокатолог</span> всех дверей с подробным описанием <span
-                class="subtitle">прямо сейчас</span>
-        </h1>
-        <div class="four-screen-content-image">
-            <img src="./images/pdf.png" class="image first-image" alt="PDF Icon">
-            <img src="./images/pdf.png" class="image second-image" alt="PDF Icon">
-        </div>
-        <div class="four-screen-action-block">
-            <div class="action-block-title">Где удобно получить</div>
-            <div class="action-block-messages">
-                <div class="action-block-messages-button telegram-button active" id="telegram-button">
-                    <div class="button-image"><span class="flare"></span></div>
-                    Telegram
-                </div>
-                <div class="action-block-messages-button viber-button" id="viber-button">
-                    <div class="button-image"><span class="flare"></span></div>
-                    Viber
-                </div>
-            </div>
-            <div class="action-block-inputs">
-                <input type="text" class="telegram-input active input tel" value="" id="telegram-input"
-                       placeholder="Ваш номер в Telegram">
-                <div class="error-text">* укажите Ваш телефон</div>
-                <input type="text" class="viber-input input tel" value="" id="viber-input"
-                       placeholder="Ваш номер в Viber">
-                <div class="error-text">* укажите Ваш телефон</div>
-            </div>
-            <div class="action-block-button">
-                <button class="button check-popup-open" id="catalog-button">Скачать каталог <span class="flare"></span>
-                </button>
-            </div>
-        </div>
-        <div class="personal-data agree">
-            <input type="checkbox" id="personal-data-checkbox" checked>
-            <label for="personal-data-checkbox">Вы принимаете условия обработки персональных данных</label>
-        </div>
-    </div>
-</section>
-
 <section class="five-screen">
+    <section class="four-screen">
+        <div class="content-box">
+            <div class="catalog-image">
+                <img src="./images/Catalog.png" alt="Catalog">
+                <img src="./images/arrow4.png" class="catalog-arrow" alt="Catalog arrow">
+            </div>
+            <div class="pdf-gray">
+                <img src="./images/sticker_PDF.png" alt="PDF-gray">
+            </div>
+            <div class="pdf">
+                <img src="./images/pdf.png" alt="PDF Icon">
+            </div>
+            <div class="airplane">
+                <img src="./images/Airplane_bg.png" class="airplane-image" alt="airplane">
+            </div>
+            <h1 class="title title-animation">
+                <span class="subtitle">Скачайте фотокатолог</span> всех дверей с подробным описанием <span
+                    class="subtitle">прямо сейчас</span>
+            </h1>
+            <div class="four-screen-content-image">
+                <img src="./images/pdf.png" class="image first-image" alt="PDF Icon">
+                <img src="./images/pdf.png" class="image second-image" alt="PDF Icon">
+            </div>
+            <div class="four-screen-action-block">
+                <div class="action-block-title">Где удобно получить</div>
+                <div class="action-block-messages">
+                    <div class="action-block-messages-button telegram-button active" id="telegram-button">
+                        <div class="button-image"><span class="flare"></span></div>
+                        Telegram
+                    </div>
+                    <div class="action-block-messages-button viber-button" id="viber-button">
+                        <div class="button-image"><span class="flare"></span></div>
+                        Viber
+                    </div>
+                </div>
+                <div class="action-block-inputs">
+                    <input type="text" class="telegram-input active input tel" value="" id="telegram-input"
+                           placeholder="Ваш номер в Telegram">
+                    <div class="error-text">* укажите Ваш телефон</div>
+                    <input type="text" class="viber-input input tel" value="" id="viber-input"
+                           placeholder="Ваш номер в Viber">
+                    <div class="error-text">* укажите Ваш телефон</div>
+                </div>
+                <div class="action-block-button">
+                    <button class="button check-popup-open" id="catalog-button">Скачать каталог <span class="flare"></span>
+                    </button>
+                </div>
+            </div>
+            <div class="personal-data agree">
+                <input type="checkbox" id="personal-data-checkbox" checked>
+                <label for="personal-data-checkbox">Вы принимаете условия обработки персональных данных</label>
+            </div>
+        </div>
+    </section>
     <div class="container">
         <h1 class="title title-animation"><span class="subtitle">Высокое качество</span> - это наша работа</h1>
         <div class="description">
@@ -883,48 +882,47 @@
             </div>
         </div>
     </div>
-</section>
-
-<section class="six-screen">
-    <div class="container">
-        <div class="six-screen-image">
-            <img src="./images/presents.png" alt="Presents">
-        </div>
-        <div class="text-block">
-            <h1 class="title title-animation">
+    <section class="six-screen">
+        <div class="container">
+            <div class="six-screen-image">
+                <img src="./images/presents.png" alt="Presents">
+            </div>
+            <div class="text-block">
+                <h1 class="title title-animation">
                 <span class="subtitle">
                 Дарим 3 подарка
                 </span>
-                при заказе любой двери
-            </h1>
-            <div class="presents-items">
-                <div class="present-item">
-                    <div class="present-image">
-                        <img src="./images/present1.png" alt="Present 1">
+                    при заказе любой двери
+                </h1>
+                <div class="presents-items">
+                    <div class="present-item">
+                        <div class="present-image">
+                            <img src="./images/present1.png" alt="Present 1">
+                        </div>
+                        <div class="present-name">
+                            Запасной замок и ключи
+                        </div>
                     </div>
-                    <div class="present-name">
-                        Запасной замок и ключи
+                    <div class="present-item">
+                        <div class="present-image">
+                            <img src="./images/present2.png" alt="Present 2">
+                        </div>
+                        <div class="present-name">
+                            Придверный коврик
+                        </div>
                     </div>
-                </div>
-                <div class="present-item">
-                    <div class="present-image">
-                        <img src="./images/present2.png" alt="Present 2">
-                    </div>
-                    <div class="present-name">
-                        Придверный коврик
-                    </div>
-                </div>
-                <div class="present-item">
-                    <div class="present-image">
-                        <img src="./images/present3.png" alt="Present 3">
-                    </div>
-                    <div class="present-name">
-                        Ложечка для обуви
+                    <div class="present-item">
+                        <div class="present-image">
+                            <img src="./images/present3.png" alt="Present 3">
+                        </div>
+                        <div class="present-name">
+                            Ложечка для обуви
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </section>
 
 <section class="seven-ten-screen">
@@ -1182,9 +1180,9 @@
         </div>
         <footer class="footer">
             <img src="./images/Logo-black.png" alt="Logo" class="logo">
-            <div class="footer-item">УНП: 124875899</div>
-            <div class="footer-item links">Пользовательское соглашение</div>
-            <div class="footer-item links">Политика обработки персональных данных</div>
+            <div class="footer-item unp">УНП: 124875899</div>
+            <div class="footer-item links agree">Пользовательское соглашение</div>
+            <div class="footer-item links personal-data">Политика обработки персональных данных</div>
         </footer>
     </div>
 </section>
