--- a/index.html
+++ b/index.html
@@ -1173,10 +1173,10 @@
                     Пн-пт с 9:00 до 21:00</h2>
                 <div class="bottom-line"></div>
             </div>
-<!--            <div class="map-container">-->
-<!--                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad96964c0223b3461f56c71fdfc38b1f54e3f631a17b699eeb77916a9cbfd69bd&amp;source=constructor"-->
-<!--                        width="518" height="338" frameborder="0"></iframe>-->
-<!--            </div>-->
+            <div class="map-container">
+                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad96964c0223b3461f56c71fdfc38b1f54e3f631a17b699eeb77916a9cbfd69bd&amp;source=constructor"
+                        width="518" height="338" frameborder="0"></iframe>
+            </div>
         </div>
         <footer class="footer">
             <img src="./images/Logo-black.png" alt="Logo" class="logo">
