--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </div>
 
                     <div class="advantages-action">
-                        <img src="./images/foto.png" alt="Foto">
+                        <img src="./images/Foto.png" alt="Foto">
                         <button class="button" id="open-consultation">Задать вопрос <span class="flare"></span></button>
                     </div>
                 </div>
